sf-hrms/force-app/main/default/objects/Designation__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Designation Code</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique short code for the designation</description>
    <inlineHelpText>Short code for reporting and integrations</inlineHelpText>
</CustomField>