sf-hrms/force-app/main/default/objects/Designation__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Lookup</type>
    <referenceTo>Department__c</referenceTo>
    <relationshipName>Designations</relationshipName>
    <relationshipLabel>Designations</relationshipLabel>
    <description>Department this designation belongs to</description>
    <inlineHelpText>The department that uses this designation</inlineHelpText>
</CustomField>