sf-hrms/force-app/main/default/objects/Designation__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Numeric grade level for the designation (1-99)</description>
    <inlineHelpText>Grade level — higher number = more senior</inlineHelpText>
</CustomField>